# interactive-manipulation-sandbox

binfrastructure/: .gitignore
binfrastructure/deploy/ansible/: Vagrantfile  dependencies.yml  deploy.sh  deploy.yml  webserver.yml
binfrastructure/django/: run.sh
binfrastructure/django/rosbif/: impl.py  ros_env_todo.txt  test.sh
binfrastructure/django/server/: local_settings.local.py  local_settings.vagrant.py  settings.py  urls.py
binfrastructure/django/sockets/: views.py
binfrastructure/django/static/: index.html  monitor.html
binfrastructure/django/static/css/: stylesheet.css
binfrastructure/django/static/js/: app.js  main.js  monitor.js  router.js  step.js
binfrastructure/django/static/templates/: application.handlebars  monitor.handlebars  program.handlebars
binfrastructure/django/templates/: index.html
binfrastructure/django/world/: admin.py  models.py  namespace.py  resturls.py  robot.py  serializers.py  urls.py  views.py
binfrastructure/django/world/fixtures/: initial_data.json
binfrastructure/django/world/migrations/: 0001_initial.py  0002_added_bif_action.py  0003_first_locations.py  0004_add_bif_action_and_program.py  0005_example_bif_program_and_actions.py  0006_add_step_dual_to_instruction.py  0007_copy_step_dual_instruction.py  0008_del_intruction_and_program_fields.py  (+7 more)
binfrastructure/ros/: README  build.sh  setup.bash  setup.sh
binfrastructure/ros/devel/: .catkin  .rosinstall  env.sh  setup.bash  setup.sh  setup.zsh
binfrastructure/ros/src/activity_msgs/: CMakeLists.txt  package.xml
continuousop/ros/: setup.sh
(+469 files in other folders)
