<package>
  <name>activity_msgs</name>
  <description>Actions for interacting with the activity_server</description>
  <version>0.1.1</version>
  <maintainer email="jbinney@willowgarage.com">Jon Binney</maintainer>
  <license>BSD</license>
  <url>http://ros.org/wiki/activity_msgs</url>

  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>message_generation</build_depend>
  <build_depend>actionlib_msgs</build_depend>

  <run_depend>message_runtime</run_depend>
  <run_depend>actionlib_msgs</run_depend>

</package>


